HelloUltraviolet/Fixtures/RejectedSource/Procedures/SelfTypeDefinition/Source/Main.uv
//! Rejected method specimen for explicit receiver Self-type recognition.

public record SelfTypeOwner {
    public value: i32

    public procedure readValue(self: i32) -> i32 {
        return self
    }
}
